more implementations of any kind

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,400 @@
             <artifactId>dotenv-java</artifactId>
             <version>3.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.johnrengelman.shadow</groupId>
+            <artifactId>shadow</artifactId>
+            <version>5.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-storage</artifactId>
+            <version>1.113.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-vision</artifactId>
+            <version>1.113.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-translate</artifactId>
+            <version>1.113.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-texttospeech</artifactId>
+            <version>1.113.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-speech</artifactId>
+            <version>1.113.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-language</artifactId>
+            <version>1.113.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-dialogflow</artifactId>
+            <version>0.120.0-alpha</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery</artifactId>
+            <version>1.113.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage</artifactId>
+            <version>1.113.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-connection</artifactId>
+            <version>1.113.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-v1beta2</artifactId>
+            <version>1.113.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos</artifactId>
+            <version>1.113.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos-json</artifactId>
+            <version>1.113.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos-java</artifactId>
+            <version>1.113.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos-java-util</artifactId>
+            <version>1.113.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos-java-util-json</artifactId>
+            <version>1.113.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos-java-util-protobuf</artifactId>
+            <version>1.113.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos-protobuf</artifactId>
+            <version>1.113.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-translate</artifactId>
+            <version>v2-rev20200504-1.30.10</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-translate</artifactId>
+            <version>v3-rev20200504-1.30.10</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-translate</artifactId>
+            <version>v3-rev20200504-1.30.10</version>
+            <classifier>beta</classifier>
+        </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-translate</artifactId>
+            <version>v3-rev20200504-1.30.10</version>
+            <classifier>beta</classifier>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-translate</artifactId>
+            <version>v3-rev20200504-1.30.10</version>
+            <classifier>beta</classifier>
+            <type>bundle</type>
+        </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-translate</artifactId>
+            <version>v3-rev20200504-1.30.10</version>
+            <classifier>beta</classifier>
+            <type>bundle</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-translate</artifactId>
+            <version>v3-rev20200504-1.30.10</version>
+            <classifier>beta</classifier>
+            <type>bundle</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-translate</artifactId>
+            <version>v3-rev20200504-1.30.10</version>
+            <classifier>beta</classifier>
+            <type>bundle</type>
+            <scope>system</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-translate</artifactId>
+            <version>v3-rev20200504-1.30.10</version>
+            <classifier>beta</classifier>
+            <type>bundle</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-translate</artifactId>
+            <version>v3-rev20200504-1.30.10</version>
+            <classifier>beta</classifier>
+            <type>bundle</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-translate</artifactId>
+            <version>v2-rev20200504-1.30.10</version>
+            <classifier>beta</classifier>
+            <type>bundle</type>
+            <scope>system</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-translate</artifactId>
+            <version>v2-rev20200504-1.30.10</version>
+            <classifier>beta</classifier>
+            <type>bundle</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-translate</artifactId>
+            <version>v2-rev20200504-1.30.10</version>
+            <classifier>beta</classifier>
+            <type>bundle</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-translate</artifactId>
+            <version>v2-rev20200504-1.30.10</version>
+            <classifier>beta</classifier>
+            <type>bundle</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-translate</artifactId>
+            <version>v2-rev20200504-1.30.10</version>
+            <classifier>beta</classifier>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos-java-util-json</artifactId>
+            <version>1.113.12</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos-java-util-json</artifactId>
+            <version>1.113.12</version>
+            <type>bundle</type>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos-java-util-json</artifactId>
+            <version>1.113.12</version>
+            <type>bundle</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos-java-util-json</artifactId>
+            <version>1.113.12</version>
+            <type>bundle</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos-java-util-json</artifactId>
+            <version>1.113.12</version>
+            <type>bundle</type>
+            <scope>system</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos-java-util-json</artifactId>
+            <version>1.113.12</version>
+            <type>bundle</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos-java-util-json</artifactId>
+            <version>1.113.12</version>
+            <type>bundle</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos-java-util-json</artifactId>
+            <version>1.113.12</version>
+            <classifier>java-util-json</classifier>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos-java-util-json</artifactId>
+            <version>1.113.12</version>
+            <classifier>java-util-json</classifier>
+            <type>bundle</type>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos-java-util-json</artifactId>
+            <version>1.113.12</version>
+            <classifier>java-util-json</classifier>
+            <type>bundle</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos-java-util-json</artifactId>
+            <version>1.113.12</version>
+            <classifier>java-util-json</classifier>
+            <type>bundle</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos-java-util-json</artifactId>
+            <version>1.113.12</version>
+            <classifier>java-util-json</classifier>
+            <type>bundle</type>
+            <scope>system</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos-java-util-json</artifactId>
+            <version>1.113.12</version>
+            <classifier>java-util-json</classifier>
+            <type>bundle</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-protos-java-util-json</artifactId>
+            <version>1.113.12</version>
+            <classifier>java-util-json</classifier>
+            <type>bundle</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-v1beta2</artifactId>
+            <version>1.113.12</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-v1beta2</artifactId>
+            <version>1.113.12</version>
+            <type>bundle</type>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-v1beta2</artifactId>
+            <version>1.113.12</version>
+            <type>bundle</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-v1beta2</artifactId>
+            <version>1.113.12</version>
+            <type>bundle</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-v1beta2</artifactId>
+            <version>1.113.12</version>
+            <type>bundle</type>
+            <scope>system</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-v1beta2</artifactId>
+            <version>1.113.12</version>
+            <type>bundle</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-v1beta2</artifactId>
+            <version>1.113.12</version>
+            <type>bundle</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-v1beta2</artifactId>
+            <version>1.113.12</version>
+            <type>bundle</type>
+            <scope>system</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-v1beta2</artifactId>
+            <version>1.113.12</version>
+            <type>bundle</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-v1beta2</artifactId>
+            <version>1.113.12</version>
+            <type>bundle</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-v1beta2</artifactId>
+            <version>1.113.12</version>
+            <type>bundle</type>
+            <scope>system</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-v1beta2</artifactId>
+            <version>1.113.12</version>
+            <type>bundle</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery-storage-v1beta2</artifactId>
+            <version>1.113.12</version>
+            <type>bundle</type>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -32,7 +426,21 @@
                     <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
-            <!-- Add any additional plugins or configurations here -->
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>appengine-maven-plugin</artifactId>
+                <version>2.2.0</version>
+                <configuration>
+                    <projectId>my-project-id</projectId>
+                    <version>1</version>
+                    <dockerBuild>true</dockerBuild>
+                    <dockerHost>unix:///var/run/docker.sock</dockerHost>
+                    <dockerDirectory>${project.basedir}/src/main/docker</dockerDirectory>
+                    <dockerImage>gcr.io/my-project-id/my-app</dockerImage>
+                    <deploy.promote>true</deploy.promote>
+                    <deploy.stopPreviousVersion>true</deploy.stopPreviousVersion>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
